// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`angular Snapshots angular: <img src="pic.jpeg" class="frogs"> 1`] = `
Object {
  "disposeAll": [Function],
  "metaTemplates": Array [
    Object {
      "files": Object {
        "angular/imgSrc.ts": "import { Component, Input } from \\"@angular/core\\";
@Component({
  selector: \\"g-imgSrc\\",
  template: \`
    <img
      class=\\"frogs\\"
      src=\\"{{ src }}\\"
      width=\\"{{ width }}\\"
      height=\\"{{ height }}\\"
      srcset=\\"{{srcset}}\\"
      crossorigin=\\"{{ crossorigin }}\\"
    />
  \`
})
export class AppComponent {
  @Input() src: string;
  @Input() width: string | undefined;
  @Input() height: string | undefined;
  @Input() srcset: string | undefined;
  @Input() crossorigin: any | undefined;
  title = \\"imgSrc\\";
}
",
      },
      "formatId": "angular",
    },
  ],
}
`;

exports[`angular Snapshots angular: Basic variables 1`] = `
Object {
  "disposeAll": [Function],
  "metaTemplates": Array [
    Object {
      "files": Object {
        "angular/paragraph.ts": "import { Component, Input } from \\"@angular/core\\";
@Component({
  selector: \\"g-paragraph\\",
  template: \`
    <p>
      <slot></slot>
    </p>
  \`
})
export class AppComponent {
  @Input() children: React.ReactNode;
  title = \\"paragraph\\";
}
",
      },
      "formatId": "angular",
    },
  ],
}
`;

exports[`angular Snapshots angular: Boolean attribute values 1`] = `
Array [
  Object {
    "files": Object {
      "angular/row.ts": "import { Component, Input } from \\"@angular/core\\";
@Component({
  selector: \\"g-row\\",
  template: \`
          
<div class=\\"g-flex-row{{isReversed ? \\" g-flex-reverse\\" : \\"\\"}}\\">

            <slot></slot>
          

</div>

\`
})
export class AppComponent {
  @Input() isReversed: boolean | undefined;
  @Input() children: React.ReactNode;
  title = \\"row\\";
}
",
    },
    "formatId": "angular",
  },
]
`;

exports[`angular Snapshots angular: Boolean attribute values 2`] = `
Array [
  Object {
    "files": Object {
      "angular/row.ts": "import { Component, Input } from \\"@angular/core\\";
@Component({
  selector: \\"g-row\\",
  template: \`
          
<div class=\\"g-form-group{{errorId ? \\" g-form-group--error\\" : \\"\\"}}\\">

            
<fieldset aria-describedby=\\"{{hintId ?  hintId : \\"\\"}}{{errorId ? \\" \\" +  errorId : \\"\\"}}\\" class=\\"g-fieldset\\">

              
<legend class=\\"g-fieldset__legend\\">

                <slot name=\\"legend\\"></slot>
              

</legend>


              
                
<div class=\\"g-hint\\" id=\\"{{hintId}}\\">

                  <slot name=\\"hint\\"></slot>
                

</div>


              
              
                
<div class=\\"g-error-message\\" id=\\"{{errorId}}\\">

                  
<span class=\\"g-visually-hidden\\">

                    Error:
                  

</span>


                  <slot name=\\"error\\"></slot>
                

</div>


              
              
<div>
<slot></slot>

</div>


            

</fieldset>


          

</div>

\`
})
export class AppComponent {
  @Input() errorId: string | undefined;
  @Input() hintId: string | undefined;
  @Input() legend: React.ReactNode;
  @Input() hint: React.ReactNode;
  @Input() error: React.ReactNode;
  @Input() children: React.ReactNode;
  title = \\"row\\";
}
",
    },
    "formatId": "angular",
  },
]
`;

exports[`angular Snapshots angular: Enum attribute values 1`] = `
Array [
  Object {
    "files": Object {
      "angular/container.ts": "import { Component, Input } from \\"@angular/core\\";
@Component({
  selector: \\"g-container\\",
  template: \`
        
<div class=\\"{{constants.containerType[containerType] !== undefined ?  constants.containerType[containerType] : \\"\\"}}\\">

          <slot></slot>
        

</div>


      \`
})
export class AppComponent {
  @Input() containerType: \\"g-flex-container\\" | \\"g-flex-container-fluid\\";
  @Input() children: React.ReactNode;
  title = \\"container\\";
}
",
    },
    "formatId": "angular",
  },
]
`;

exports[`angular Snapshots angular: Form input[checked] 1`] = `
Object {
  "disposeAll": [Function],
  "metaTemplates": Array [
    Object {
      "files": Object {
        "angular/input.ts": "import { Component, Input } from \\"@angular/core\\";
@Component({
  selector: \\"g-input\\",
  template: \`
    <input
      id=\\"{{ textId }}\\"
      type=\\"checkbox\\"
      disabled=\\"{{ disabled }}\\"
      readonly=\\"{{ readOnly }}\\"
      autofocus=\\"{{ autoFocus }}\\"
      name=\\"{{ name }}\\"
      value=\\"{{ value }}\\"
      checked=\\"{{ checked }}\\"
    />
  \`
})
export class AppComponent {
  @Input() textId: string | undefined;
  @Input() disabled: boolean | undefined;
  @Input() readOnly: boolean | undefined;
  @Input() autoFocus: boolean | undefined;
  @Input() name: string;
  @Input() value: string | undefined;
  @Input() checked: boolean | undefined;
  title = \\"input\\";
}
",
      },
      "formatId": "angular",
    },
  ],
}
`;

exports[`angular Snapshots angular: Form label input[checked] 1`] = `
Object {
  "disposeAll": [Function],
  "metaTemplates": Array [
    Object {
      "files": Object {
        "angular/input.ts": "import { Component, Input } from \\"@angular/core\\";
@Component({
  selector: \\"g-input\\",
  template: \`
    <label for=\\"{{ textId }}\\">
      <input
        id=\\"{{ textId }}\\"
        type=\\"checkbox\\"
        disabled=\\"{{ disabled }}\\"
        readonly=\\"{{ readOnly }}\\"
        autofocus=\\"{{ autoFocus }}\\"
        name=\\"{{ name }}\\"
        value=\\"{{ value }}\\"
        checked=\\"{{ checked }}\\"
      />
    </label>
  \`
})
export class AppComponent {
  @Input() textId: string | undefined;
  @Input() disabled: boolean | undefined;
  @Input() readOnly: boolean | undefined;
  @Input() autoFocus: boolean | undefined;
  @Input() name: string;
  @Input() value: string | undefined;
  @Input() checked: boolean | undefined;
  title = \\"input\\";
}
",
      },
      "formatId": "angular",
    },
  ],
}
`;

exports[`angular Snapshots angular: H1 with configurable Id 1`] = `
Object {
  "disposeAll": [Function],
  "metaTemplates": Array [
    Object {
      "files": Object {
        "angular/h1Id.ts": "import { Component, Input } from \\"@angular/core\\";
@Component({
  selector: \\"g-h1Id\\",
  template: \`
    <h1 id=\\"{{ id }}\\">
      stuff
    </h1>
  \`
})
export class AppComponent {
  @Input() id: string | undefined;
  title = \\"h1Id\\";
}
",
      },
      "formatId": "angular",
    },
  ],
}
`;

exports[`angular Snapshots angular: Link with boolean class 1`] = `
Array [
  Object {
    "files": Object {
      "angular/a.ts": "import { Component, Input } from \\"@angular/core\\";
@Component({
  selector: \\"g-a\\",
  template: \`
<a class=\\"g-link{{isMuted ? \\" g-link--muted\\" : \\"\\"}}\\" href=\\"{{href}}\\" rel=\\"{{rel}}\\" target=\\"{{target}}\\">
<slot></slot>

</a>

\`
})
export class AppComponent {
  @Input() isMuted: boolean | undefined;
  @Input() href: string;
  @Input() rel: string | undefined;
  @Input() target: any | undefined;
  @Input() children: React.ReactNode;
  title = \\"a\\";
}
",
    },
    "formatId": "angular",
  },
]
`;

exports[`angular Snapshots angular: Lots of enum attribute values 1`] = `
Array [
  Object {
    "files": Object {
      "angular/container.ts": "import { Component, Input } from \\"@angular/core\\";
@Component({
  selector: \\"g-container\\",
  template: \`
      
<div class=\\"g-flex-col{{isReversed ? \\" g-flex-reverse\\" : \\"\\"}}{{constants.columnXs[columnXs] !== undefined ? \\" \\" +  constants.columnXs[columnXs] : \\"\\"}}\\">

        <slot></slot>
      

</div>

\`
})
export class AppComponent {
  @Input() isReversed: boolean | undefined;
  @Input() columnXs:
    | \\"g-flex-col-xs\\"
    | \\"g-flex-col-xs-1\\"
    | \\"g-flex-col-xs-2\\"
    | \\"g-flex-col-xs-3\\"
    | \\"g-flex-col-xs-4\\"
    | \\"g-flex-col-xs-5\\"
    | \\"g-flex-col-xs-6\\"
    | \\"g-flex-col-xs-7\\"
    | \\"g-flex-col-xs-8\\"
    | \\"g-flex-col-xs-9\\"
    | \\"g-flex-col-xs-10\\"
    | \\"g-flex-col-xs-11\\"
    | \\"g-flex-col-xs-12\\";
  @Input() children: React.ReactNode;
  title = \\"container\\";
}
",
    },
    "formatId": "angular",
  },
]
`;

exports[`angular Snapshots angular: form input[text] 1`] = `
Object {
  "disposeAll": [Function],
  "metaTemplates": Array [
    Object {
      "files": Object {
        "angular/input.ts": "import { Component, Input } from \\"@angular/core\\";
@Component({
  selector: \\"g-input\\",
  template: \`
    <label for=\\"{{ textId }}\\">
      Label text
    </label>

    <input
      id=\\"{{ textId }}\\"
      type=\\"text\\"
      disabled=\\"{{ disabled }}\\"
      readonly=\\"{{ readOnly }}\\"
      autofocus=\\"{{ autoFocus }}\\"
      name=\\"{{ name }}\\"
      value=\\"{{ value }}\\"
      spellcheck=\\"{{ spellCheck }}\\"
      maxlength=\\"{{ maxLength }}\\"
      autocomplete=\\"{{ autoComplete }}\\"
    />
  \`
})
export class AppComponent {
  @Input() textId: string | undefined;
  @Input() disabled: boolean | undefined;
  @Input() readOnly: boolean | undefined;
  @Input() autoFocus: boolean | undefined;
  @Input() name: string;
  @Input() value: string | undefined;
  @Input() spellCheck: boolean | undefined;
  @Input() maxLength: number | undefined;
  @Input() autoComplete: any;
  title = \\"input\\";
}
",
      },
      "formatId": "angular",
    },
  ],
}
`;

exports[`angular Snapshots makeIndexImports 1`] = `
Object {
  "react-ts/index.tsx": "// DEVELOPER NOTE: These components are ready to lazy-load. You may also import components directly.

export const blah.js = () => import(\\"./blah.js\\");
",
  "react-ts/indexNotLazy.tsx": "// DEVELOPER NOTE: This file includes all components so importing this file may be very inefficient. Use carefully! You may prefer to import components directly or use index.js which has import functions, typically treated as a code splitting point.

export { default as blahJs } from \\"./blah.js\\";
",
}
`;

exports[`angular angular: CSS Configuration (CSS Variables and Scss Variables) 1`] = `
Array [
  Object {
    "files": Object {
      "angular/a.ts": "import { Component, Input } from \\"@angular/core\\";
@Component({
  selector: \\"g-a\\",
  template: \`
<a class=\\"g-link{{isMuted ? \\" g-link--muted\\" : \\"\\"}}\\" href=\\"{{href}}\\" rel=\\"{{rel}}\\" target=\\"{{target}}\\">
<slot></slot>

</a>

\`
})
export class AppComponent {
  @Input() isMuted: boolean | undefined;
  @Input() href: string;
  @Input() rel: string | undefined;
  @Input() target: any | undefined;
  @Input() children: React.ReactNode;
  title = \\"a\\";
}
",
    },
    "formatId": "angular",
  },
]
`;

exports[`angular angular: CSS Configuration (CSS Variables and Scss Variables) 2`] = `
Array [
  Object {
    "files": Object {
      "angular/a.ts": "import { Component, Input } from \\"@angular/core\\";
@Component({
  selector: \\"g-a\\",
  template: \`
<a class=\\"g-link{{isMuted ? \\" g-link--muted\\" : \\"\\"}}\\" href=\\"{{href}}\\" rel=\\"{{rel}}\\" target=\\"{{target}}\\">
<slot></slot>

</a>

\`
})
export class AppComponent {
  @Input() isMuted: boolean | undefined;
  @Input() href: string;
  @Input() rel: string | undefined;
  @Input() target: any | undefined;
  @Input() children: React.ReactNode;
  title = \\"a\\";
}
",
    },
    "formatId": "angular",
  },
]
`;

exports[`angular angular: CSS Configuration of Fonts 1`] = `
Array [
  Object {
    "files": Object {
      "angular/a.ts": "import { Component, Input } from \\"@angular/core\\";
@Component({
  selector: \\"g-a\\",
  template: \`
    <a class=\\"g-link\\" href=\\"{{ href }}\\" rel=\\"{{ rel }}\\" target=\\"{{ target }}\\">
      <slot></slot>
    </a>
  \`
})
export class AppComponent {
  @Input() href: string;
  @Input() rel: string | undefined;
  @Input() target: any | undefined;
  @Input() children: React.ReactNode;
  title = \\"a\\";
}
",
    },
    "formatId": "angular",
  },
]
`;

exports[`angular angular: CalculatedProps 1`] = `
Object {
  "disposeAll": [Function],
  "metaTemplates": Array [
    Object {
      "files": Object {
        "angular/textbox.ts": "import { Component, Input } from \\"@angular/core\\";
@Component({
  selector: \\"g-textbox\\",
  template: \`
    <input
      disabled=\\"{{ disabled }}\\"
      readonly=\\"{{ readOnly }}\\"
      autofocus=\\"{{ autoFocus }}\\"
      name=\\"{{ name }}\\"
      value=\\"{{ value }}\\"
      min=\\"{{ min }}\\"
      max=\\"{{ max }}\\"
      type=\\"{{ type }}\\"
      spellcheck=\\"{{ spellCheck }}\\"
      maxlength=\\"{{ maxLength }}\\"
      autocomplete=\\"{{ autoComplete }}\\"
    />
  \`
})
export class AppComponent {
  @Input() disabled: boolean | undefined;
  @Input() readOnly: boolean | undefined;
  @Input() autoFocus: boolean | undefined;
  @Input() name: string;
  @Input() value: string | undefined;
  @Input() min: number | undefined;
  @Input() max: number | undefined;
  @Input() type: any;
  @Input() spellCheck: boolean | undefined;
  @Input() maxLength: number | undefined;
  @Input() autoComplete: any;
  title = \\"textbox\\";
}
",
      },
      "formatId": "angular",
    },
  ],
}
`;

exports[`angular angular: jsxToUsageCode with boolean false 1`] = `
Object {
  "angular": "",
}
`;

exports[`angular angular: jsxToUsageCode with boolean false and inline HTML 1`] = `
Object {
  "angular": "",
}
`;

exports[`angular angular: jsxToUsageCode with boolean true 1`] = `
Object {
  "angular": "",
}
`;

exports[`angular angular: jsxToUsageCode with enumerations 1`] = `
Object {
  "angular": "",
}
`;

exports[`angular angular: makeUsage 1`] = `
Object {
  "angular": "",
}
`;

exports[`angular angular: makeUsage with booleans 1`] = `
Object {
  "angular": "",
}
`;

exports[`angular angular: renders aria-current 1`] = `
Object {
  "disposeAll": [Function],
  "metaTemplates": Array [
    Object {
      "files": Object {
        "angular/ariacurrent.ts": "import { Component, Input } from \\"@angular/core\\";
@Component({
  selector: \\"g-ariacurrent\\",
  template: \`
    <a
      aria-current=\\"{{ ariaCurrent }}\\"
      href=\\"{{ href }}\\"
      rel=\\"{{ rel }}\\"
      target=\\"{{ target }}\\"
    >
      test
    </a>
  \`
})
export class AppComponent {
  @Input() ariaCurrent: any | undefined;
  @Input() href: string;
  @Input() rel: string | undefined;
  @Input() target: any | undefined;
  title = \\"ariacurrent\\";
}
",
      },
      "formatId": "angular",
    },
  ],
}
`;

exports[`angular angular: retains name prop 1`] = `
Object {
  "disposeAll": [Function],
  "metaTemplates": Array [
    Object {
      "files": Object {
        "angular/textboxes.ts": "import { Component, Input } from \\"@angular/core\\";
@Component({
  selector: \\"g-textboxes\\",
  template: \`
    <input
      id=\\"{{ yearId }}\\"
      maxlength=\\"4\\"
      name=\\"{{ yearName }}\\"
      type=\\"text\\"
      disabled=\\"{{ disabled }}\\"
      readonly=\\"{{ readOnly }}\\"
      autofocus=\\"{{ autoFocus }}\\"
      value=\\"{{ value }}\\"
      spellcheck=\\"{{ spellCheck }}\\"
      autocomplete=\\"{{ autoComplete }}\\"
    />

    <input
      id=\\"{{ monthId }}\\"
      maxlength=\\"2\\"
      name=\\"{{ monthName }}\\"
      type=\\"text\\"
      value=\\"{{ value2 }}\\"
      disabled=\\"{{ disabled }}\\"
      readonly=\\"{{ readOnly }}\\"
      autofocus=\\"{{ autoFocus }}\\"
      spellcheck=\\"{{ spellCheck }}\\"
      autocomplete=\\"{{ autoComplete }}\\"
    />

    <input
      id=\\"{{ dayId }}\\"
      maxlength=\\"2\\"
      name=\\"{{ dayName }}\\"
      type=\\"text\\"
      value=\\"{{ value3 }}\\"
      disabled=\\"{{ disabled }}\\"
      readonly=\\"{{ readOnly }}\\"
      autofocus=\\"{{ autoFocus }}\\"
      spellcheck=\\"{{ spellCheck }}\\"
      autocomplete=\\"{{ autoComplete }}\\"
    />
  \`
})
export class AppComponent {
  @Input() yearId: string | undefined;
  @Input() disabled: boolean | undefined;
  @Input() readOnly: boolean | undefined;
  @Input() autoFocus: boolean | undefined;
  @Input() yearName: string;
  @Input() value: string | undefined;
  @Input() spellCheck: boolean | undefined;
  @Input() autoComplete: any;
  @Input() monthId: string | undefined;
  @Input() monthName: string;
  @Input() value2: string | undefined;
  @Input() dayId: string | undefined;
  @Input() dayName: string;
  @Input() value3: string | undefined;
  title = \\"textboxes\\";
}
",
      },
      "formatId": "angular",
    },
  ],
}
`;
